parser/SystemRDLParser.py
# Generated from SystemRDL.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class SystemRDLParser ( Parser ):

    grammarFileName = "SystemRDL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'property'", "'type'", "'default'", "'true'", 
                     "'false'", "'component'", "'signal'", "'addrmap'", 
                     "'reg'", "'regfile'", "'field'", "'all'", "'boolean'", 
                     "'string'", "'number'", "'ref'", "'external'", "'internal'", 
                     "'alias'", "'enum'", "'name'", "'desc'", "'arbiter'", 
                     "'rset'", "'rclr'", "'woclr'", "'woset'", "'we'", "'wel'", 
                     "'swwe'", "'swwel'", "'hwset'", "'hwclr'", "'swmod'", 
                     "'swacc'", "'sticky'", "'stickybit'", "'intr'", "'anded'", 
                     "'ored'", "'xored'", "'counter'", "'overflow'", "'sharedextbus'", 
                     "'errextbus'", "'reset'", "'littleendian'", "'bigendian'", 
                     "'rsvdset'", "'rsvdsetX'", "'bridge'", "'shared'", 
                     "'msb0'", "'lsb0'", "'sync'", "'async'", "'cpuif_reset'", 
                     "'field_reset'", "'activehigh'", "'activelow'", "'singlepulse'", 
                     "'underflow'", "'incr'", "'decr'", "'incrwidth'", "'decrwidth'", 
                     "'incrvalue'", "'decrvalue'", "'saturate'", "'decrsaturate'", 
                     "'threshold'", "'decrthreshold'", "'dontcompare'", 
                     "'donttest'", "'alignment'", "'regwidth'", "'fieldwidth'", 
                     "'signalwidth'", "'accesswidth'", "'sw'", "'hw'", "'addressing'", 
                     "'precedence'", "'encode'", "'resetsignal'", "'clock'", 
                     "'mask'", "'enable'", "'hwenable'", "'hwmask'", "'haltmask'", 
                     "'haltenable'", "'halt'", "'next'", "'rw'", "'wr'", 
                     "'r'", "'w'", "'na'", "'compact'", "'regalign'", "'fullalign'", 
                     "'posedge'", "'negedge'", "'bothedge'", "'level'", 
                     "'nonsticky'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "'@'", "'|'", "';'", "':'", 
                     "','", "'.'", "'->'", "'='", "'+='", "'%='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "COMMENT", "LINE_COMMENT", "ID", "NUM", "STR", 
                      "LBRACE", "RBRACE", "LSQ", "RSQ", "LPAREN", "RPAREN", 
                      "AT", "OR", "SEMI", "COLON", "COMMA", "DOT", "DREF", 
                      "EQ", "INC", "MOD", "INST_ID", "PROPERTY" ]

    RULE_root = 0
    RULE_property_definition = 1
    RULE_property_body = 2
    RULE_property_type = 3
    RULE_property_default = 4
    RULE_property_usage = 5
    RULE_property_component = 6
    RULE_property_boolean_type = 7
    RULE_property_string_type = 8
    RULE_property_number_type = 9
    RULE_property_ref_type = 10
    RULE_component_def = 11
    RULE_explicit_component_inst = 12
    RULE_anonymous_component_inst_elems = 13
    RULE_component_inst_elem = 14
    RULE_array = 15
    RULE_instance_ref = 16
    RULE_instance_ref_elem = 17
    RULE_property_assign = 18
    RULE_default_property_assign = 19
    RULE_explicit_property_assign = 20
    RULE_post_property_assign = 21
    RULE_property_assign_rhs = 22
    RULE_concat = 23
    RULE_concat_elem = 24
    RULE_s_property = 25
    RULE_property_rvalue_constant = 26
    RULE_property_modifier = 27
    RULE_s_id = 28
    RULE_num = 29
    RULE_string = 30
    RULE_enum_def = 31
    RULE_enum_body = 32
    RULE_enum_entry = 33
    RULE_enum_property_assign = 34

    ruleNames =  [ "root", "property_definition", "property_body", "property_type", 
                   "property_default", "property_usage", "property_component", 
                   "property_boolean_type", "property_string_type", "property_number_type", 
                   "property_ref_type", "component_def", "explicit_component_inst", 
                   "anonymous_component_inst_elems", "component_inst_elem", 
                   "array", "instance_ref", "instance_ref_elem", "property_assign", 
                   "default_property_assign", "explicit_property_assign", 
                   "post_property_assign", "property_assign_rhs", "concat", 
                   "concat_elem", "s_property", "property_rvalue_constant", 
                   "property_modifier", "s_id", "num", "string", "enum_def", 
                   "enum_body", "enum_entry", "enum_property_assign" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    WS=108
    COMMENT=109
    LINE_COMMENT=110
    ID=111
    NUM=112
    STR=113
    LBRACE=114
    RBRACE=115
    LSQ=116
    RSQ=117
    LPAREN=118
    RPAREN=119
    AT=120
    OR=121
    SEMI=122
    COLON=123
    COMMA=124
    DOT=125
    DREF=126
    EQ=127
    INC=128
    MOD=129
    INST_ID=130
    PROPERTY=131

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SystemRDLParser.EOF, 0)

        def component_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SystemRDLParser.Component_defContext)
            else:
                return self.getTypedRuleContext(SystemRDLParser.Component_defContext,i)


        def enum_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SystemRDLParser.Enum_defContext)
            else:
                return self.getTypedRuleContext(SystemRDLParser.Enum_defContext,i)


        def explicit_component_inst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SystemRDLParser.Explicit_component_instContext)
            else:
                return self.getTypedRuleContext(SystemRDLParser.Explicit_component_instContext,i)


        def property_assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SystemRDLParser.Property_assignContext)
            else:
                return self.getTypedRuleContext(SystemRDLParser.Property_assignContext,i)


        def property_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SystemRDLParser.Property_definitionContext)
            else:
                return self.getTypedRuleContext(SystemRDLParser.Property_definitionContext,i)


        def getRuleIndex(self):
            return SystemRDLParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = SystemRDLParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SystemRDLParser.T__0) | (1 << SystemRDLParser.T__2) | (1 << SystemRDLParser.T__6) | (1 << SystemRDLParser.T__7) | (1 << SystemRDLParser.T__8) | (1 << SystemRDLParser.T__9) | (1 << SystemRDLParser.T__10) | (1 << SystemRDLParser.T__16) | (1 << SystemRDLParser.T__17) | (1 << SystemRDLParser.T__18) | (1 << SystemRDLParser.T__19) | (1 << SystemRDLParser.T__20) | (1 << SystemRDLParser.T__21) | (1 << SystemRDLParser.T__22) | (1 << SystemRDLParser.T__23) | (1 << SystemRDLParser.T__24) | (1 << SystemRDLParser.T__25) | (1 << SystemRDLParser.T__26) | (1 << SystemRDLParser.T__27) | (1 << SystemRDLParser.T__28) | (1 << SystemRDLParser.T__29) | (1 << SystemRDLParser.T__30) | (1 << SystemRDLParser.T__31) | (1 << SystemRDLParser.T__32) | (1 << SystemRDLParser.T__33) | (1 << SystemRDLParser.T__34) | (1 << SystemRDLParser.T__35) | (1 << SystemRDLParser.T__36) | (1 << SystemRDLParser.T__37) | (1 << SystemRDLParser.T__38) | (1 << SystemRDLParser.T__39) | (1 << SystemRDLParser.T__40) | (1 << SystemRDLParser.T__41) | (1 << SystemRDLParser.T__42) | (1 << SystemRDLParser.T__43) | (1 << SystemRDLParser.T__44) | (1 << SystemRDLParser.T__45) | (1 << SystemRDLParser.T__46) | (1 << SystemRDLParser.T__47) | (1 << SystemRDLParser.T__48) | (1 << SystemRDLParser.T__49) | (1 << SystemRDLParser.T__50) | (1 << SystemRDLParser.T__51) | (1 << SystemRDLParser.T__52) | (1 << SystemRDLParser.T__53) | (1 << SystemRDLParser.T__54) | (1 << SystemRDLParser.T__55) | (1 << SystemRDLParser.T__56) | (1 << SystemRDLParser.T__57) | (1 << SystemRDLParser.T__58) | (1 << SystemRDLParser.T__59) | (1 << SystemRDLParser.T__60) | (1 << SystemRDLParser.T__61) | (1 << SystemRDLParser.T__62))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (SystemRDLParser.T__63 - 64)) | (1 << (SystemRDLParser.T__64 - 64)) | (1 << (SystemRDLParser.T__65 - 64)) | (1 << (SystemRDLParser.T__66 - 64)) | (1 << (SystemRDLParser.T__67 - 64)) | (1 << (SystemRDLParser.T__68 - 64)) | (1 << (SystemRDLParser.T__69 - 64)) | (1 << (SystemRDLParser.T__70 - 64)) | (1 << (SystemRDLParser.T__71 - 64)) | (1 << (SystemRDLParser.T__72 - 64)) | (1 << (SystemRDLParser.T__73 - 64)) | (1 << (SystemRDLParser.T__74 - 64)) | (1 << (SystemRDLParser.T__75 - 64)) | (1 << (SystemRDLParser.T__76 - 64)) | (1 << (SystemRDLParser.T__77 - 64)) | (1 << (SystemRDLParser.T__78 - 64)) | (1 << (SystemRDLParser.T__79 - 64)) | (1 << (SystemRDLParser.T__80 - 64)) | (1 << (SystemRDLParser.T__81 - 64)) | (1 << (SystemRDLParser.T__82 - 64)) | (1 << (SystemRDLParser.T__83 - 64)) | (1 << (SystemRDLParser.T__84 - 64)) | (1 << (SystemRDLParser.T__85 - 64)) | (1 << (SystemRDLParser.T__86 - 64)) | (1 << (SystemRDLParser.T__87 - 64)) | (1 << (SystemRDLParser.T__88 - 64)) | (1 << (SystemRDLParser.T__89 - 64)) | (1 << (SystemRDLParser.T__90 - 64)) | (1 << (SystemRDLParser.T__91 - 64)) | (1 << (SystemRDLParser.T__92 - 64)) | (1 << (SystemRDLParser.T__93 - 64)) | (1 << (SystemRDLParser.T__102 - 64)) | (1 << (SystemRDLParser.T__103 - 64)) | (1 << (SystemRDLParser.T__104 - 64)) | (1 << (SystemRDLParser.T__105 - 64)) | (1 << (SystemRDLParser.T__106 - 64)) | (1 << (SystemRDLParser.ID - 64)))) != 0) or _la==SystemRDLParser.INST_ID or _la==SystemRDLParser.PROPERTY:
                self.state = 75
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 70
                    self.component_def()
                    pass

                elif la_ == 2:
                    self.state = 71
                    self.enum_def()
                    pass

                elif la_ == 3:
                    self.state = 72
                    self.explicit_component_inst()
                    pass

                elif la_ == 4:
                    self.state = 73
                    self.property_assign()
                    pass

                elif la_ == 5:
                    self.state = 74
                    self.property_definition()
                    pass


                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(SystemRDLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Property_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s_id(self):
            return self.getTypedRuleContext(SystemRDLParser.S_idContext,0)


        def LBRACE(self):
            return self.getToken(SystemRDLParser.LBRACE, 0)

        def property_body(self):
            return self.getTypedRuleContext(SystemRDLParser.Property_bodyContext,0)


        def RBRACE(self):
            return self.getToken(SystemRDLParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(SystemRDLParser.SEMI, 0)

        def getRuleIndex(self):
            return SystemRDLParser.RULE_property_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty_definition" ):
                listener.enterProperty_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty_definition" ):
                listener.exitProperty_definition(self)




    def property_definition(self):

        localctx = SystemRDLParser.Property_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_property_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(SystemRDLParser.T__0)
            self.state = 83
            self.s_id()
            self.state = 84
            self.match(SystemRDLParser.LBRACE)
            self.state = 85
            self.property_body()
            self.state = 86
            self.match(SystemRDLParser.RBRACE)
            self.state = 87
            self.match(SystemRDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Property_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def property_type(self):
            return self.getTypedRuleContext(SystemRDLParser.Property_typeContext,0)


        def property_usage(self):
            return self.getTypedRuleContext(SystemRDLParser.Property_usageContext,0)


        def property_default(self):
            return self.getTypedRuleContext(SystemRDLParser.Property_defaultContext,0)


        def getRuleIndex(self):
            return SystemRDLParser.RULE_property_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty_body" ):
                listener.enterProperty_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty_body" ):
                listener.exitProperty_body(self)




    def property_body(self):

        localctx = SystemRDLParser.Property_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_property_body)
        self._la = 0 # Token type
        try:
            self.state = 118
            token = self._input.LA(1)
            if token in [SystemRDLParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.property_type()
                self.state = 97
                token = self._input.LA(1)
                if token in [SystemRDLParser.T__5]:
                    self.state = 90
                    self.property_usage()
                    self.state = 92
                    _la = self._input.LA(1)
                    if _la==SystemRDLParser.T__2:
                        self.state = 91
                        self.property_default()



                elif token in [SystemRDLParser.T__2]:
                    self.state = 94
                    self.property_default()
                    self.state = 95
                    self.property_usage()

                else:
                    raise NoViableAltException(self)


            elif token in [SystemRDLParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.property_usage()
                self.state = 107
                token = self._input.LA(1)
                if token in [SystemRDLParser.T__1]:
                    self.state = 100
                    self.property_type()
                    self.state = 102
                    _la = self._input.LA(1)
                    if _la==SystemRDLParser.T__2:
                        self.state = 101
                        self.property_default()



                elif token in [SystemRDLParser.T__2]:
                    self.state = 104
                    self.property_default()
                    self.state = 105
                    self.property_type()

                else:
                    raise NoViableAltException(self)


            elif token in [SystemRDLParser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.property_default()
                self.state = 116
                token = self._input.LA(1)
                if token in [SystemRDLParser.T__1]:
                    self.state = 110
                    self.property_type()
                    self.state = 111
                    self.property_usage()

                elif token in [SystemRDLParser.T__5]:
                    self.state = 113
                    self.property_usage()
                    self.state = 114
                    self.property_type()

                else:
                    raise NoViableAltException(self)


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Property_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(SystemRDLParser.EQ, 0)

        def SEMI(self):
            return self.getToken(SystemRDLParser.SEMI, 0)

        def property_string_type(self):
            return self.getTypedRuleContext(SystemRDLParser.Property_string_typeContext,0)


        def property_number_type(self):
            return self.getTypedRuleContext(SystemRDLParser.Property_number_typeContext,0)


        def property_boolean_type(self):
            return self.getTypedRuleContext(SystemRDLParser.Property_boolean_typeContext,0)


        def property_ref_type(self):
            return self.getTypedRuleContext(SystemRDLParser.Property_ref_typeContext,0)


        def getRuleIndex(self):
            return SystemRDLParser.RULE_property_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty_type" ):
                listener.enterProperty_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty_type" ):
                listener.exitProperty_type(self)




    def property_type(self):

        localctx = SystemRDLParser.Property_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_property_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(SystemRDLParser.T__1)
            self.state = 121
            self.match(SystemRDLParser.EQ)
            self.state = 126
            token = self._input.LA(1)
            if token in [SystemRDLParser.T__13]:
                self.state = 122
                self.property_string_type()

            elif token in [SystemRDLParser.T__14]:
                self.state = 123
                self.property_number_type()

            elif token in [SystemRDLParser.T__12]:
                self.state = 124
                self.property_boolean_type()

            elif token in [SystemRDLParser.T__7, SystemRDLParser.T__8, SystemRDLParser.T__9, SystemRDLParser.T__10, SystemRDLParser.T__15]:
                self.state = 125
                self.property_ref_type()

            else:
                raise NoViableAltException(self)

            self.state = 128
            self.match(SystemRDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Property_defaultContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(SystemRDLParser.EQ, 0)

        def SEMI(self):
            return self.getToken(SystemRDLParser.SEMI, 0)

        def string(self):
            return self.getTypedRuleContext(SystemRDLParser.StringContext,0)


        def num(self):
            return self.getTypedRuleContext(SystemRDLParser.NumContext,0)


        def getRuleIndex(self):
            return SystemRDLParser.RULE_property_default

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty_default" ):
                listener.enterProperty_default(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty_default" ):
                listener.exitProperty_default(self)




    def property_default(self):

        localctx = SystemRDLParser.Property_defaultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_property_default)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(SystemRDLParser.T__2)
            self.state = 131
            self.match(SystemRDLParser.EQ)
            self.state = 136
            token = self._input.LA(1)
            if token in [SystemRDLParser.STR]:
                self.state = 132
                self.string()

            elif token in [SystemRDLParser.NUM]:
                self.state = 133
                self.num()

            elif token in [SystemRDLParser.T__3]:
                self.state = 134
                self.match(SystemRDLParser.T__3)

            elif token in [SystemRDLParser.T__4]:
                self.state = 135
                self.match(SystemRDLParser.T__4)

            else:
                raise NoViableAltException(self)

            self.state = 138
            self.match(SystemRDLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Property_usageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(SystemRDLParser.EQ, 0)

        def property_component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SystemRDLParser.Property_componentContext)
            else:
                return self.getTypedRuleContext(SystemRDLParser.Property_componentContext,i)


        def SEMI(self):
            return self.getToken(SystemRDLParser.SEMI, 0)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SystemRDLParser.OR)
            else:
                return self.getToken(SystemRDLParser.OR, i)

        def getRuleIndex(self):
            return SystemRDLParser.RULE_property_usage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty_usage" ):
                listener.enterProperty_usage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty_usage" ):
                listener.exitProperty_usage(self)




    def property_usage(self):
